# k-means

./: .gitignore  CMakeLists.txt  README.md  k-means_parallel.cpp  k-means_sequential.cpp  k-means_sequential_AoS.cpp  k-means_sequential_SoA.cpp
config_files/: config_sets.ini
datasets/: generated_blob_dataset_40k.csv  generated_blob_dataset_4k.csv
documentation/: K-Means_presentazione.pptx
